# mlops-journey

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  artifacts.dvc  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb
src/: predict.py  preprocess.py  train.py
tests/: test_data.py  test_predict.py  test_preprocess.py
