[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-journey"
version = "0.1.0"
description = "MLOps Journey: Churn Prediction Pipeline"
authors = [
    {name = "Ramil", email = "dainarius@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn==1.4.0",
    "pandas==2.2.0",
    "numpy==1.26.3",
    "pyarrow==15.0.0",
    "mlflow==2.10.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.1",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "jupyter==1.0.0",
    "ipykernel==6.29.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = [
    '.git',
    '__pycache__',
    '.venv',
    'venv',
    'build',
    'dist',
    '.eggs',
    '*.egg-info',
]
